# server/index.js
@@ -5,6 +5,7 @@ import swaggerUi from "swagger-ui-express";
 import fs from "fs";
 import userRoutes from "./routes/user.js";
 import projectRoutes from "./routes/project.js";
+import productRoutes from "./routes/product.js";
 
 const rawData = fs.readFileSync("./swagger.json");
 const swaggerDocument = JSON.parse(rawData);
@@ -18,6 +19,8 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/user", userRoutes);
 
 app.use("/api/project", projectRoutes);
+
+app.use("/api/product", productRoutes);
 
 app.get("/api/protected", (req, res) => {
   // Verify the JWT
